--- a/Pages/NavMenu.razor
+++ b/Pages/NavMenu.razor
@@ -39,9 +39,9 @@
                         @foreach (var session in ChatSessions)
                         {
                             <div class="col">
-                                <div class="card @(IsActiveSession(session.SessionId) ? "bg-primary text-light" : "bg-primary opacity-50 text-light")" @onclick="@(e => LoadChat(session.SessionId,session.Name, session.TokensUsed))">
-                                    <div class="card-body">
-                                        <a class="card-title text-decoration-none h6" @onclick="@(e => LoadChat(session.SessionId,session.Name, session.TokensUsed))">
+                                <div class="card @(IsActiveSession(session.SessionId) ? "bg-primary text-light" : "bg-primary opacity-50 text-light")">
+                                    <div class="card-body user-select-none" role="button" @onclick="@(e => LoadChat(session.SessionId,session.Name, session.TokensUsed))">
+                                        <a class="card-title text-decoration-none h6">
                                             @if (IsActiveSession(session.SessionId))
                                             {
                                                 <i class="bi bi-chat-right-dots-fill me-2"></i>
@@ -52,7 +52,7 @@
                                         </a>
                                     </div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <span class="badge bg-light me-2">
+                                        <span class="badge bg-light me-2 user-select-none">
                                             Tokens Used: @session.TokensUsed
                                         </span>
                                         <div class="btn-group" role="group">
