--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -16,6 +16,14 @@
             integrity="sha256-axRDISYf7Hht1KhcMnfDV2nq7hD/8Q9Rxa0YlW/o3NU=" crossorigin="anonymous">
         <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
         <script src="js/site.js"></script>
+        <style>
+            .bg-primary{
+                background-color:#5c02f7 !important;
+            }
+            .bg-success{
+                background-color:#fc5f51 !important;
+            }
+        </style>
     </head>
     <body class="h-100">
         <div id="blazor-error-ui" class="collapse fixed-top rounded-0 mb-0 alert alert-danger" role="alert">
