--- a/Pages/ChatPane.razor
+++ b/Pages/ChatPane.razor
@@ -121,7 +121,7 @@
     <div class="bg-primary text-light px-4 py-2 rounded-top-5 text-dark d-flex flex-column justify-content-center">
         <div class="input-group">
             <i class="bi bi-body-text input-group-text" aria-hidden="true"></i>
-            <input class="form-control form-control-sm" type="text" @bind="@UserPromptSet" @onkeydown="@Enter" @oninput="@((e) => { UserPrompt=e.Value?.ToString();})" rows="1" placeholder="<Your Message>"></input>
+            <input class="form-control form-control-sm" id="exampleFormControlTextarea1" type="text" @bind="@UserPromptSet" @onkeydown="@Enter" @oninput="@((e) => { UserPrompt=e.Value?.ToString();})" rows="1" placeholder="<Your Message>"></input>
             <button type="button" class="btn btn-outline-secondary" @onclick="SubmitPromptAsync">
                 <i class="bi bi-send-fill" aria-hidden="true"></i>
             </button>
@@ -223,12 +223,12 @@
 
         if(_messagesInChat?.Count == 2)
         {
-            string newSessionName;
-            newSessionName = await chatService.SummarizeChatSessionNameAsync(CurrentSession?.SessionId, String.Join(Environment.NewLine, _messagesInChat.Select(m => m.Text)));
+            //string newSessionName;
+            //newSessionName = await chatService.SummarizeChatSessionNameAsync(CurrentSession?.SessionId, String.Join(Environment.NewLine, _messagesInChat.Select(m => m.Text)));
 
             if (CurrentSession is not null)
             {
-                CurrentSession.Name = newSessionName;
+                //CurrentSession.Name = newSessionName;
             }
         }
         await OnChatUpdated.InvokeAsync();
