--- a/Pages/ChatPane.razor
+++ b/Pages/ChatPane.razor
@@ -121,7 +121,7 @@
     <div class="bg-primary text-light px-4 py-2 rounded-top-5 text-dark d-flex flex-column justify-content-center">
         <div class="input-group">
             <i class="bi bi-body-text input-group-text" aria-hidden="true"></i>
-            <input class="form-control form-control-sm" id="exampleFormControlTextarea1" type="text" @bind="@UserPromptSet" @onkeydown="@Enter" @oninput="@((e) => { UserPrompt=e.Value?.ToString();})" rows="1" placeholder="<Your Message>"></input>
+            <textarea class="form-control form-control-sm" id="exampleFormControlTextarea1" type="text" @bind="@UserPromptSet" @onkeydown="@Enter" @oninput="@((e) => { UserPrompt=e.Value?.ToString();})" rows="6" placeholder="<Your Message>"></textarea>
             <button type="button" class="btn btn-outline-secondary" @onclick="SubmitPromptAsync">
                 <i class="bi bi-send-fill" aria-hidden="true"></i>
             </button>
@@ -201,7 +201,7 @@
 
     public async Task Enter(KeyboardEventArgs e)
     {
-        if (e.Code == "Enter" || e.Code == "NumpadEnter")
+        if (e.Code == "Enter" && !e.ShiftKey)
         {
             await SubmitPromptAsync();
         }
