--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,11 +2,12 @@
 
 <PageTitle>Intermountain GPT</PageTitle>
 <main class="h-100 d-flex flex-row justify-content-start">
- 
-        <NavMenu @ref="@NavMenu" OnChatClicked="LoadChatEventHandlerAsync"  />
-    
+    @if (!IsNavMenuCollapsed)
+    {
+        <NavMenu @ref="@NavMenu" OnChatClicked="LoadChatEventHandlerAsync" OnNavBarVisibilityUpdated="UpdateNavBarVisibility" />
+    }
     <section class="flex-grow-1">
-        <ChatPane @ref="@ChatPane" CurrentSession="@CurrentSession" OnChatUpdated="ForceRefreshAsync" />
+        <ChatPane @ref="@ChatPane" CurrentSession="@CurrentSession" OnChatUpdated="ForceRefreshAsync" OnNavBarVisibilityUpdated="UpdateNavBarVisibility" ShowHeader="@IsNavMenuCollapsed" />
     </section>
 </main>
 
@@ -19,6 +20,11 @@
     private ChatPane? ChatPane = default;
     private NavMenu? NavMenu = default;
     private bool IsNavMenuCollapsed { get; set; }
+
+    private void UpdateNavBarVisibility()
+    {
+        IsNavMenuCollapsed = !IsNavMenuCollapsed;
+    }
 
     protected override void OnInitialized()
     {
