--- a/Pages/NavMenu.razor
+++ b/Pages/NavMenu.razor
@@ -12,6 +12,9 @@
                 </svg>
                 <span class="navbar-brand mb-0 ms-1 h1">Intermountain GPT</span>
             </div>
+            <button class="navbar-toggler border-0" @onclick="ToggleNavMenu">
+                <i class="bi bi-arrow-right-square-fill"></i>
+            </button>
         </div>
     </div>
 
@@ -96,6 +99,10 @@
     [Parameter]
     public static List<Session> ChatSessions { get; set; } = new();
 
+    
+    [Parameter]
+    public EventCallback OnNavBarVisibilityUpdated { get; set; }
+
     [Parameter]
     public EventCallback OnThemeUpdated { get; set; }
 
@@ -113,7 +120,10 @@
     {
         await OnThemeUpdated.InvokeAsync();
     }
-
+    async private Task ToggleNavMenu()
+    {
+        await OnNavBarVisibilityUpdated.InvokeAsync();
+    }
     protected override void OnInitialized()
     {
         OnNavMenuChanged += async (o, e) =>
