--- a/Pages/ChatPane.razor
+++ b/Pages/ChatPane.razor
@@ -128,7 +128,7 @@
         {
             <div class="input-group">
                 <i class="bi bi-body-text input-group-text" aria-hidden="true"></i>
-                <textarea class="form-control form-control-sm" type="text" value="@UserPrompt"  @onkeydown="@Enter"  @oninput="@((e) => { UserPrompt=e.Value?.ToString();})" rows="1" placeholder="<Your Message>"></textarea>
+                <textarea class="form-control form-control-sm" type="text" value="@UserPrompt" @onkeydown="@((e) => Enter(e))" @oninput="@((e) => HandleInput(e))" rows="2" placeholder="<Your Message>"></textarea>
                 <button type="button" class="btn btn-outline-secondary" @onclick="SubmitPromptAsync">
                     <i class="bi bi-send-fill" aria-hidden="true"></i>
                 </button>
@@ -207,11 +207,11 @@
         CurrentSession = session;
     }
     
-//    private async Task HandleInput(ChangeEventArgs e)
-//    {
-//        UserPrompt = e.Value?.ToString();
+    private async Task HandleInput(ChangeEventArgs e)
+    {
+        UserPrompt = e.Value?.ToString();
 
-//    }
+    }
    private async Task Enter(KeyboardEventArgs e)
     {
         if (e.Key == "Enter" && !e.ShiftKey)
