--- a/Pages/ChatPane.razor
+++ b/Pages/ChatPane.razor
@@ -1,4 +1,4 @@
-﻿@using Cosmos.Chat.GPT.Constants
+﻿﻿@using Cosmos.Chat.GPT.Constants
 @using Cosmos.Chat.GPT.Services
 @using Humanizer
 @using System.Text.RegularExpressions;
@@ -11,7 +11,6 @@
         <div class="navbar navbar-dark bg-primary">
             <div class="w-100 navbar navbar-dark bg-primary d-flex flex-row px-4 justify-content-between flex-nowrap">
                 <div class="d-flex flex-row justify-content-start">
-                    <i class="bi bi-plus mx-3"></i>
                      <svg version="1.0" xmlns="http://www.w3.org/2000/svg"  width="30.000000pt" height="30.000000pt" viewBox="0 0 48.000000 51.000000"  preserveAspectRatio="xMidYMid meet">  <g transform="translate(0.000000,51.000000) scale(0.100000,-0.100000)" fill="#f9f9f9" stroke="none"> <path d="M267 450 c-14 -11 -29 -30 -32 -41 -5 -14 -12 -18 -23 -14 -37 16 -61 12 -83 -11 -20 -22 -22 -28 -12 -55 8 -21 9 -39 2 -57 -16 -43 -1 -141 26 -168 19 -19 33 -22 91 -22 38 1 77 5 86 9 11 6 27 3 46 -8 27 -16 31 -16 55 -1 45 30 47 130 4 192 -17 24 -19 35 -11 65 13 46 0 95 -28 116 -32 21 -90 19 -121 -5z m86 -12 c52 -27 60 -68 21 -113 -24 -29 -25 -29 -19 -5 l6 25 -20 -25 -20 -25 35 -9 c48 -11 74 -54 71 -115 -3 -55 -12 -71 -37 -71 -21 0 -28 18 -32 85 -2 28 -8 40 -18 40 -11 0 -16 -16 -20 -60 -4 -48 -9 -61 -24 -63 -27 -5 -39 12 -38 53 1 19 0 35 -2 35 -2 0 -13 -15 -24 -34 -15 -25 -17 -33 -6 -29 8 3 14 1 14 -5 0 -5 -7 -13 -16 -16 -56 -21 -84 12 -84 100 0 65 15 92 45 80 19 -7 22 -107 3 -103 -6 1 -14 -6 -16 -15 -7 -34 18 -18 52 34 33 48 35 55 29 109 -7 67 7 111 40 127 29 14 34 14 60 0z m-159 -64 c26 -10 20 -53 -8 -60 -32 -8 -46 2 -46 30 0 35 17 44 54 30z"/> <path d="M297 393 c-11 -10 -8 -45 3 -38 6 3 10 0 10 -7 0 -8 5 -7 16 4 9 9 14 24 11 32 -7 16 -28 21 -40 9z"/> <path d="M310 250 c-11 -11 -20 -32 -19 -47 1 -28 1 -28 10 4 5 18 19 39 31 48 13 8 17 15 10 15 -6 0 -21 -9 -32 -20z"/> </g> </svg> 
                     <span class="navbar-brand mb-0 ms-1 h1">Intermountain GPT</span>
                 </div>
@@ -81,10 +80,10 @@
                 }
                 else
                 {
-                    <div class="toast-container position-static w-100 d-inline-flex flex-column display-flex">
+                    <div class="toast-container position-static w-100 d-flex flex-column align-items-stretch">
                         @foreach (var msg in _messagesInChat)
                         {
-                            <div class="toast fade show rounded-3 @(msg.Sender == nameof(Participants.Assistant) ? "align-self-end" : "align-self-start")">
+                            <div class="toast fade show w-75 rounded-3 @(msg.Sender == nameof(Participants.Assistant) ? "align-self-end" : "align-self-start")">
                                 <div class="toast-header @(msg.Sender == nameof(Participants.Assistant) ? "bg-success text-dark" : "bg-primary text-light")">
                                     <i class="bi @(msg.Sender == nameof(Participants.Assistant) ? "bi-robot" : "bi-person") me-1" aria-hidden="true"></i>
                                     <strong class="me-auto text-capitalize">
@@ -125,13 +124,14 @@
         }            			
 	</div>
     <div class="bg-primary text-light px-4 py-2 rounded-top-5 text-dark d-flex flex-column justify-content-center">
-        <div class="input-group">
-            <i class="bi bi-body-text input-group-text" aria-hidden="true"></i>
-            <textarea class="form-control form-control-sm" id="exampleFormControlTextarea1" type="text" @bind="@UserPromptSet" @onkeydown="@Enter" @oninput="@((e) => { UserPrompt=e.Value?.ToString();})" rows="2" placeholder="<Your Message>"></textarea>
-            <button type="button" class="btn btn-outline-secondary" @onclick="SubmitPromptAsync">
-                <i class="bi bi-send-fill" aria-hidden="true"></i>
-            </button>
-        </div>
+            <div class="input-group">
+                <i class="bi bi-body-text input-group-text" aria-hidden="true"></i>
+                <textarea class="form-control form-control-sm" type="text" value="@UserPrompt" @onkeydown="@((e) => Enter(e))" @oninput="@((e) => HandleInput(e))" rows="2" placeholder="<Your Message>"></textarea>
+                <button type="button" class="btn btn-outline-secondary" @onclick="SubmitPromptAsync">
+                    <i class="bi bi-send-fill" aria-hidden="true"></i>
+                </button>
+            </div>
+        
     </div>			
 </div>
 
@@ -205,14 +205,43 @@
         CurrentSession = session;
     }
     
-   public async Task Enter(KeyboardEventArgs e)
+    private async Task HandleInput(ChangeEventArgs e)
     {
-        if (e.Code == "Enter" || e.Code == "NumpadEnter")
-        {
+        UserPrompt = e.Value?.ToString();
+
+    }
+   private async Task Enter(KeyboardEventArgs e)
+    {
+        if (e.Key == "Enter" && !e.ShiftKey)
+        {  
+            
             await SubmitPromptAsync();
+ //           UserPromptSet = string.Empty; // Set the value to empty
+            await ClearInput();
+            
+             
+            
+            
         }
     }
+    private async Task ClearInput()
+    {
+        
+        UserPrompt = ""; // Clear the input property (assuming it's a string property)
+      //  StateHasChanged();
+      //  await Task.Delay(0.2);
+      //  await JSRuntime.InvokeVoidAsync("eval", "document.querySelector('.form-control').value = '';");
+    }
 
+ 
+ //   public async Task Enter(KeyboardEventArgs e)
+ //   {
+ //       if (e.Code == "Enter" || e.Code == "NumpadEnter")
+ //       {
+//            await SubmitPromptAsync();
+ //       }
+ //   }
+//
     private async Task SubmitPromptAsync()
     {
         if (CurrentSession?.SessionId == Interface.EMPTY_SESSION || UserPrompt == String.Empty || UserPrompt is null)
@@ -221,16 +250,19 @@
         }
 
         await chatService.GetChatCompletionAsync(CurrentSession?.SessionId, UserPrompt);
-        if (UserPrompt != String.Empty)
-       {           
-            UserPromptSet = String.Empty;
-
-        }
+//        if (UserPrompt != String.Empty)
+//        {           
+//            UserPromptSet = String.Empty;
+//            Console.WriteLine(UserPrompt);
+//            if (string.IsNullOrEmpty(UserPromptSet))
+//                    {
+//                        Console.WriteLine("The string is empty.");
+//                    }
+//        }
         if(_messagesInChat?.Count == 2)
         {
             string newSessionName;
             newSessionName = await chatService.SummarizeChatSessionNameAsync(CurrentSession?.SessionId, String.Join(Environment.NewLine, _messagesInChat.Select(m => m.Text)));
-            newSessionName = "New Chat";
 
             if (CurrentSession is not null)
             {
@@ -251,7 +283,7 @@
     {
         null => String.Empty,
         (Session s) when s.SessionId == Interface.EMPTY_SESSION => String.Empty,
-        _ => CurrentSession.Name
+        _ => String.Empty
     };
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
