--- a/Pages/ChatPane.razor
+++ b/Pages/ChatPane.razor
@@ -1,12 +1,11 @@
-﻿﻿@using Cosmos.Chat.GPT.Constants
+﻿@using Cosmos.Chat.GPT.Constants
 @using Cosmos.Chat.GPT.Services
 @using Humanizer
-@using System.Text.RegularExpressions;
 @inject ChatService chatService
 @inject IJSRuntime JSRuntime
 
 <div class="h-100 mh-100 d-flex flex-column overflow-hidden justify-content-start">
-      @if (ShowHeader)
+    @if (ShowHeader)
     {
         <div class="navbar navbar-dark bg-primary">
             <div class="w-100 navbar navbar-dark bg-primary d-flex flex-row px-4 justify-content-between flex-nowrap">
@@ -20,7 +19,7 @@
             </div>
         </div>
     } 
-   <h6 class="px-4 display-6 text-secondary p-2">@GetChatSessionName()</h6>
+    <h6 class="px-4 display-6 text-secondary p-2">@GetChatSessionName()</h6>
     <div class="px-4 pb-4 pt-2 flex-grow-1 overflow-y-auto overflow-x-hidden align-items-stretch" id="MessagesInChatdiv">
         @if (CurrentSession is null)
         {
@@ -101,18 +100,7 @@
                                 <div class="toast-body">
                                     <i class="bi bi-grip-vertical mr-2 text-black-50"></i>
                                     @{
-                                        var text = msg.Text.Replace("\n", "<br />");
-                                        Regex rgx = new Regex("```");
-                                        var matches = rgx.Matches(text);
-                                        if(matches.Count() > 0)
-                                            for(int i = 0; i < matches.Count; i++)
-                                                if(i % 2 == 0)
-                                                    // even = start code block tag
-                                                    text = rgx.Replace(text, "<pre><code>", 1, i);
-                                                else
-                                                    // odd = end code block tag
-                                                    text = rgx.Replace(text, "</pre></code>", 1, i);
-                                        MarkupString html = new MarkupString(text);
+                                        MarkupString html = new MarkupString(msg.Text.Replace("\n", "<br />"));
                                     }
                                     @html
                                 </div>
@@ -124,14 +112,13 @@
         }            			
 	</div>
     <div class="bg-primary text-light px-4 py-2 rounded-top-5 text-dark d-flex flex-column justify-content-center">
-            <div class="input-group">
-                <i class="bi bi-body-text input-group-text" aria-hidden="true"></i>
-                <textarea class="form-control form-control-sm" type="text" value="@UserPrompt" @onkeydown="@((e) => Enter(e))" @oninput="@((e) => HandleInput(e))" rows="2" placeholder="<Your Message>"></textarea>
-                <button type="button" class="btn btn-outline-secondary" @onclick="SubmitPromptAsync">
-                    <i class="bi bi-send-fill" aria-hidden="true"></i>
-                </button>
-            </div>
-        
+        <div class="input-group">
+            <i class="bi bi-body-text input-group-text" aria-hidden="true"></i>
+            <textarea class="form-control form-control-sm" id="exampleFormControlTextarea1" type="text" @bind="@UserPromptSet" @onkeydown="@Enter" @oninput="@((e) => { UserPrompt=e.Value?.ToString();})" rows="2" placeholder="<Your Message>"></textarea>
+            <button type="button" class="btn btn-outline-secondary" @onclick="SubmitPromptAsync">
+                <i class="bi bi-send-fill" aria-hidden="true"></i>
+            </button>
+        </div>
     </div>			
 </div>
 
@@ -143,10 +130,10 @@
     [Parameter]
     public Session? CurrentSession { get; set; }
 
-     [Parameter]
+    [Parameter]
     public bool ShowHeader { get; set; }
 
-    [Parameter]
+	[Parameter]
     public EventCallback OnNavBarVisibilityUpdated { get; set; }
 
     private string? UserPrompt { get; set; }
@@ -157,7 +144,7 @@
     private static event EventHandler<Session>? _onMessagePosted;
     private bool _loadingComplete;
 
-    async private Task ToggleNavMenu()
+	async private Task ToggleNavMenu()
     {
         await OnNavBarVisibilityUpdated.InvokeAsync();
     }
@@ -169,7 +156,7 @@
             _messagesInChat = await chatService.GetChatSessionMessagesAsync(CurrentSession.SessionId);
         }
     }
-    
+
     protected override void OnInitialized()
     {
         _onMessagePosted += async (o, e) =>
@@ -204,44 +191,15 @@
     {
         CurrentSession = session;
     }
-    
-    private async Task HandleInput(ChangeEventArgs e)
-    {
-        UserPrompt = e.Value?.ToString();
 
-    }
-   private async Task Enter(KeyboardEventArgs e)
+    public async Task Enter(KeyboardEventArgs e)
     {
-        if (e.Key == "Enter" && !e.ShiftKey)
-        {  
-            
+        if (e.Code == "Enter" && !e.ShiftKey)
+        {
             await SubmitPromptAsync();
- //           UserPromptSet = string.Empty; // Set the value to empty
-            await ClearInput();
-            
-             
-            
-            
         }
     }
-    private async Task ClearInput()
-    {
-        
-        UserPrompt = ""; // Clear the input property (assuming it's a string property)
-      //  StateHasChanged();
-      //  await Task.Delay(0.2);
-      //  await JSRuntime.InvokeVoidAsync("eval", "document.querySelector('.form-control').value = '';");
-    }
 
- 
- //   public async Task Enter(KeyboardEventArgs e)
- //   {
- //       if (e.Code == "Enter" || e.Code == "NumpadEnter")
- //       {
-//            await SubmitPromptAsync();
- //       }
- //   }
-//
     private async Task SubmitPromptAsync()
     {
         if (CurrentSession?.SessionId == Interface.EMPTY_SESSION || UserPrompt == String.Empty || UserPrompt is null)
@@ -249,20 +207,23 @@
             return;
         }
 
+ 
+
         await chatService.GetChatCompletionAsync(CurrentSession?.SessionId, UserPrompt);
-//        if (UserPrompt != String.Empty)
-//        {           
-//            UserPromptSet = String.Empty;
-//            Console.WriteLine(UserPrompt);
-//            if (string.IsNullOrEmpty(UserPromptSet))
-//                    {
-//                        Console.WriteLine("The string is empty.");
-//                    }
-//        }
+        UserPrompt = "";
+        await JSRuntime.InvokeVoidAsync("eval", "document.querySelector('.form-control').value = '';");
+
+               if (UserPrompt != String.Empty)
+        {           
+            UserPromptSet = String.Empty;
+ 
+        }
+
         if(_messagesInChat?.Count == 2)
         {
             string newSessionName;
             newSessionName = await chatService.SummarizeChatSessionNameAsync(CurrentSession?.SessionId, String.Join(Environment.NewLine, _messagesInChat.Select(m => m.Text)));
+            newSessionName = String.Empty;
 
             if (CurrentSession is not null)
             {
@@ -298,8 +259,4 @@
     {
         await JSRuntime.InvokeAsync<bool>("scrollToLastMessage");
     }
-
- //   private string UserPromptSet { get; set; }
-
-
 }
